--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link href="css/estilos.css" rel="stylesheet" >
     <title>Menu Desplegable</title>
 </head>
     <header>
-
         <div class="lateral">
             <nav>
                 <a href="">Inicio</a>
@@ -17,23 +16,22 @@
             </nav>
         </div>
     </header>
-<main>
-    <body>
-        <div class="cuerpoCentral">
-
-            <div class="barras">
+    <main>
+        <body>
+            <div class="cuerpoCentral">
+            <div class="cuadro-azul">
                 <a><span>Titulo bien perron</span><br> 
                     desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
         </div>
-        <div class="barras2">
+        <div class="cuadro-amarillo">
             <a><span>Titulo bien perron</span><br> 
                 desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
         </div>
-        <div class="barras3">
+        <div class="cuadro-naranja">
             <a><span>Titulo bien perron</span><br> 
                 desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
             </div>
-            <div class="barras4">
+            <div class="cuadro-rojo">
             <a><span>Titulo bien perron</span><br> 
                 desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
             </div>
