--- a/index.html
+++ b/index.html
@@ -6,48 +6,36 @@
     <title>Menu Desplegable</title>
 </head>
     <header>
-        <div class="lateral">
-            <nav>
-                <a href="">Inicio</a>
-                <a href="">Nosotros</a>
-                <a href="">Perros</a>
-                <a href="">Gatos</a>
-                <a href="">Contactos</a>
-            </nav>
-        </div>
     </header>
     <main>
         <body>
             <div class="cuerpoCentral">
-            <div class="cuadro-azul">
-                <a><span>Titulo bien perron</span><br> 
-                    desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
-        </div>
-        <div class="cuadro-amarillo">
-            <a><span>Titulo bien perron</span><br> 
-                desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
-        </div>
-        <div class="cuadro-naranja">
-            <a><span>Titulo bien perron</span><br> 
-                desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
+                <div class="lateral">
+                    <nav>
+                        <a href="">Inicio</a>
+                        <a href="">Nosotros</a>
+                        <a href="">Perros</a>
+                        <a href="">Gatos</a>
+                        <a href="">Contactos</a>
+                    </nav>
+                </div>
+                <div class="cuadro-azul">
+                    <p><span>Titulo Cuadro Azul</span><br> 
+                        desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedanddasdasd. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                </div>
+                <div class="cuadro-amarillo">
+                    <p><span>Titulo Cuadro Amarillo</span><br> 
+                        desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p  >
+                </div>
+                <div class="cuadro-naranja">
+                    <p><span>Titulo Cuadro Naranja</span><br> 
+                        desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                </div>
+                <div id="cuadro-rojo">
+                <p><span>Titulo Cuadro Rojo</span><br> 
+                    desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                </div>
             </div>
-            <div class="cuadro-rojo">
-            <a><span>Titulo bien perron</span><br> 
-                desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</a>
-            </div>
-<!-- 
-        <div>
-            <table id="tablaPrueba">
-                <th>
-                    hola
-                </th>
-                <th>
-                    desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
-                </th>
-            </table>
-        </div>
-         -->
-    </div>
     </body>
 </main>
 
